-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.2
-
Component/s: Go - Compiler
-
Labels:None
-
Patch Info:Patch Available
test.thrift
namespace go thrift2555 struct Element3 { 1 : i32 plus_1 10 : i32 plus_10 } service FooBar { Element3 Convert(3: Element3 three) }
produces
ttypes.go
type Element3 struct { Plus_1 int32 `thrift:"plus_1,1"` // unused field # 2 // unused field # 3 // unused field # 4 // unused field # 5 // unused field # 6 // unused field # 7 // unused field # 8 // unused field # 9 Plus_10 int32 `thrift:"plus_10,10"` }
which starts to become annoying the larger the gaps between the numbers are.