THRIFT-2555 excessive "unused field" comments Client: Go Patch: Jens Geyer